# FOCUS

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
focus/: __init__.py  __main__.py  app.py  engine.py  state.py  visualization.py
